syntax="proto3";

package Service.Other.v1.Model;

option php_namespace="Modix\\Grpc\\Service\\Other\\v1\\Model";
option php_metadata_namespace="Modix\\Grpc\\Service\\Other\\v1\\Metadata";

message MultiplyArgs {
  int32 a = 1;
  int32 b = 2;
}

message MultiplyResult {
  int32 result = 1;
}
